<resources>
    <string name="app_name">First Aid</string>
    <string name="whatToDo">Important Topics:</string>
    <string name="textview">Seizures</string>
    <string name="textview1">How To Prepare a basic First Aid Kit</string>
    <string name="textview2">Cuts</string>
    <string name="textview3">Burns</string>
    <string name="textview4">Choking</string>
    <string name="textview5">Fractures</string>
    <string name="textview6">Internal Bleeding</string>
    <string name="about">About</string>
    <string name="button">Sand</string>
    <string name="LabelTopic1">Seizures</string>
    <string name="LabelTopic2">How To Prepare a basic First Aid Kit</string>
    <string name="LabelTopic3">Cuts</string>
    <string name="LabelTopic4">Burns</string>
    <string name="LabelTopic5">Choking</string>
    <string name="LabelTopic6">Fractures</string>
    <string name="LabelTopic7">Internal Bleeding</string>
    <string name="LabelAbout">About</string>
    <string name="Large_Text1">
       "If you witness a seizure, try to keep the"
 " calm down and before anything else call an"
        " emergency service. Pay close attention to what happens "
		"during and after the crisis.\n\n"

"During a seizure:\n\n"

"Protect the person from injury"
"Try to rest the person gently on the floor"
        ", if it shows signs of falling"
"Try moving away furniture or other objects that"
        "may injure the person during the seizure"
"If the person having a seizure is already "
        "on the floor when you arrive, put something soft under your head"
"Do not force anything, including your fingers, into the person's mouth."
        " Placing something in the person's mouth can cause injury to him or her,"
        "like chipped teeth or a fractured jaw. You could also be bitten"
"Turn the person to your side, with your mouth down, unless the person resists being moved"
"Do not attempt to release or shake the person"
"If person vomits, turn person to side."
"Pay close attention to what the person"" is doing so you can describe"" convulsion to the rescue or doctor:\n\n"

"What type of body movement occurred?"
"How long did the seizure last?"
"How did the person act immediately after the attack?"
"Are there injuries?\n\n"
    </string>
    <string name="Large_Text2">
        "A basic first aid kit may contain:\n\n"

"1- plasters in a variety of different sizes and shapes "
"2- small, medium and large sterile gauze dressings "
"3- at least 2 sterile eye dressings "
"4- triangular bandages "
"5- crêpe rolled bandages "
"6- safety pins "
"7- disposable sterile gloves "
"8- tweezers "
"9- scissors "
"10- alcohol-free cleansing wipes "
"11- sticky tape "
"12- thermometer (preferably digital) "
"13- skin rash cream, such as hydrocortisone or calendula "
"14- cream or spray to relieve insect bites and stings "
"15- antiseptic cream "
"16- painkillers such as paracetamol (or infant paracetamol for children), aspirin (not to be given to children under 16), or ibuprofen "
"17- cough medicine "
"18- antihistamine cream or tablets "
"19- distilled water for cleaning wounds "
"20- eye wash and eye bath\n\n "
        "It may also be useful to keep a basic first aid manual or instruction booklet with your first aid kit.\n\n "
        "Medicines should be checked regularly to make sure they're within their use-by dates.\n\n "
    </string>
    <string name="Large_Text3">
        "Check the cut. If you can see fat, muscles or bones,"
"you probably need stitches. Check"
" the situation with a doctor if you are not sure."
"Signs of a problem that needs medical attention"
" may include any of the following: extreme pain "
", bleeding and signs of shock (cold, excessive sweating,"
" chills or pallor). To know if a cut"
" crossed the skin, try to observe the presence of "
" fat (irregular and yellow tissue), muscles "
" (fibrous and red tissue) or bones (surface "
" rigid and white). Points are not "
" necessary if the cut does not cross the skin. "
" Treat the injury at home.\n\n"
    </string>
    <string name="Large_Text4">
"The universal rule for burning by fire is to cease the source of the flames;"
" then use cold water to cool the affected area."
"This is the indicated output, since there are no"
" medication, product or homemade recipe  "
"to reduce the pain caused by a "
"burn or improve the injury."
"The famous ointments, even those available"
" in pharmacies, stress still"
" mais as células da pele, irritando-a e"
" causing infections. If bubbles appear, do not"
" blow them at all: they are"
" natural protection against burns."
" Bubbles are typical of second degree burns, "
"deeper, and should only be handled by a physician."
"Avoid wrapping the lesion with tissues"
" or cotton: they can stick."
"Accessories such as watches, bracelets, rings, laces"
" and earrings, on the other hand, should be withdrawn."
" This is because the human body tends to swell after suffering a burn and"
" these objects can get stuck."
    </string>
    <string name="Large_TextAbout">
        "Made by Hugo Lazzari and\n"
        "Agatha Cerqueira"
    </string>
    <string name="Large_text5">
    "if the person is able to cough forcefully, the person should keep coughing. If the person is"
    "choking and can't talk, cry or laugh forcefully, the American Red Cross recommends a 'five-"
    "and-five' approach to delivering first aid\n"
    "Give 5 back blows. Stand to the side and just behind a choking adult. For a child, kneel "
    "down behind. Place one arm across the person's chest for support. Bend the person over"
    "at the waist so that the upper body is parallel with the ground. Deliver five separate back"
    "blows between the person's shoulder blades with the heel of your hand.\n"
    "Give 5 abdominal thrusts. Perform five abdominal thrusts (also known as the Heimlich ""maneuver).\n"
    "Alternate between 5 blows and 5 thrusts until the blockage is dislodged.\n"
        "The American Heart Association doesn't teach the back blow technique, only the "
        "abdominal thrust procedures. It's OK not to use back blows if you haven't learned the "
        "technique. Both approaches are acceptable."
"To perform abdominal thrusts (Heimlich maneuver) on someone else:"
"Stand behind the person. Place one foot slightly in front of the other for balance. Wrap"
        "your arms around the waist. Tip the person forward slightly. If a child is choking, kneel "
        "down behind the child."
"Make a fist with one hand. Position it slightly above the person's navel."
"Grasp the fist with the other hand. Press hard into the abdomen with a quick, upward "
        "thrust — as if trying to lift the person up."
"Perform between six and 10 abdominal thrusts until the blockage is dislodged."
    </string>
    <string name="Large_text6">
        "Don't move the person except if necessary to avoid further injury."
        "Take these actions immediately while waiting for medical help:\n"
        "Stop any bleeding. Apply pressure to the wound with a sterile "
        "bandage, a clean cloth or a clean piece of clothing."
        "Immobilize the injured area. Don't try to realign the bone or "
        "push a bone that's sticking out back in. If you've been trained "
        "in how to splint and professional help isn't readily available, "
        "apply a splint to the area above and below the fracture sites. "
        "Padding the splints can help reduce discomfort."
        "Apply ice packs to limit swelling and help relieve pain."
        "Don't apply ice directly to the skin. Wrap the ice in a towel, "
        "piece of cloth or some other material."
        "Treat for shock. If the person feels faint or is breathing in "
        "short, rapid breaths, lay the person down with the head slightly "
        "lower than the trunk and, if possible, elevate the legs."

    </string>
    <string name="Large_text7">
        "1. Internal Bleeding\n"
"- Internal bleeding should always be suspected when blood is not seen to flow but the victim has one or more of the following signs and symptoms.\n"
"Signals and symptons:\n"
"- Thirst."
"- Feeling of cold (chills)."
"- Progressively faster and weaker pulse.\n"
"In even more serious cases:\n"
"- Paleness."
"- Cooling, especially of the ends"
"- Buzzing."
"- Change in the state of consciousness.\n"
"What you should do:\n"
"- Calm the victim and keep her awake."
"- Unscrew the clothes."
"- Keep the victim comfortably warm."
"- Put it in Safety Lateral Position."
"It is a serious situation that requires urgent transportation to the hospital.\n"
"What you should not do:\n"
"- Give drink or food\n\n"
"Caution: the rescuer must wear disposable gloves before any procedure."

    </string>
    <string name="LabelTopic8">External Bleeding</string>
    <string name="textview7">External Bleeding</string>
    <string name="Large_text8">
        "2. External Bleeding\n"
"What to do:\n"
"- Lay the victim horizontally."
"- Apply a sterile dressing on the wound or, if it is not present, a washed cloth, exerting a firm pressure with one or both"
"hands, with a finger or even with a clean bandage, depending on the location and extent of the injury."
"If it is saturated with blood, put another on top of it, but without removing the first."
"- Make the compression last until the bleeding stops (at least 10 minutes)."
"- If the bleeding stops, apply a compressive dressing over the wound.\n\n"
"Caution: the rescuer must wear disposable gloves before any procedure."

    </string>
</resources>
