<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/whatToDo"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topic1"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="90dp"
        android:clickable="true"
        android:text="@string/textview"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:text="@string/textview1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/topic1" />

    <TextView
        android:id="@+id/topic3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:text="@string/textview2"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/topic2" />

    <TextView
        android:id="@+id/topic4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:text="@string/textview3"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/topic3" />

    <TextView
        android:id="@+id/topic5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:text="@string/textview4"
        android:focusable="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/topic4" />

    <TextView
        android:id="@+id/topic6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:text="@string/textview5"
        android:focusable="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/topic5" />

    <TextView
        android:id="@+id/topic7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:text="@string/textview6"
        android:focusable="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/topic6" />

    <TextView
        android:id="@+id/topic8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:text="@string/textview7"
        android:focusable="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/topic7" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="75dp"
        android:clickable="true"
        android:text="@string/about"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>